fixed title height on mobile

--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -155,7 +155,7 @@
     min-height: calc(100vh - 59px);
   }
   .Homepage-title {
-    margin-top: 50px;
+    margin-top: 10px;
     font-size: 64px;
   }
   .Homepage-name {
